--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			 * @param Node start
 			 * @param Node goal
 			 *
-			 * @return void
+			 * @return [] this.paths
 			 */
 			search (start, goal) 
 			{
